syntax = "proto3";

option csharp_namespace = "RevolvingGamesServer";

package Revolving;

service RevolvingService {
    rpc CheckPrimeNmber (PrimeNumber) returns (PrimeNumberResp);
}

message PrimeNumber {
    int64 id = 1;
    int64 timestamp = 2;
    int64 number = 3;
}

message PrimeNumberResp {
    int64 id = 1;
    bool isPrime = 2;
}
